<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>
        <import type="android.view.View"/>
        <variable
            name="viewModel"
            type="hust.kat.studentadder.entities.StudentModel" />
    </data>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/student_add_activity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/editInfo"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <EditText
            android:id="@+id/editName"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginTop="16dp"
            android:autofillHints=""
            android:inputType="textPersonName"
            android:maxLength="100"
            android:hint="@string/full_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/editStudentId"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginTop="24dp"
            android:autofillHints=""
            android:enabled="false"
            android:maxLength="10"
            android:hint="@string/student_id" />

        <EditText
            android:id="@+id/editPhoneNumber"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginTop="24dp"
            android:autofillHints=""
            android:inputType="phone"
            android:hint="@string/add_phone_number"/>

        <EditText
            android:id="@+id/editEmail"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginTop="24dp"
            android:autofillHints=""
            android:inputType="textEmailAddress"
            android:hint="@string/add_email"/>
    </LinearLayout>

    <Button
        android:id="@+id/updateStudentButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/update"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editInfo" />

</androidx.constraintlayout.widget.ConstraintLayout>

</layout>